# SkP_6_course_27_HW

./: .gitignore  pyproject.toml
ads/: models.py  views.py
ads/fixtures/: ads.json  csv_to_json.py
ads/migrations/: 0001_initial.py
avito/: settings.py  urls.py
